@@ -1,2 +1,35 @@
 # Number_system_conversoin_in_java
 Board game for Decimal to binary, Decimal to Octal and Hex and viceversa. This game targets for the learning mostly student under 7 or 8 grade.
+
+
+How to run the game:
+1. Open IntelliJ IDEA
+     Also Assuming that Java is already configured in intellij.
+2. Click open the folder "Conversion" as Intellij Project.
+3. then include javaFx libraray as external library in the project.(Configuration given below) 
+4. Add VM options. (Configuration given below)
+5. Run main method from Conversion class.
+6. play
+
+///How to configure javafx in IntelliJ IDEA///
+
+1. Download javafx from gluonhq
+2. open intelliJ and open any project
+3. press ctrl+alt+shift+u
+4. go to global libraries
+5. add location of lib folder in the downloaded javafx files.
+6. whenever you make javafx project, press ctrl+alt+shit+u, go to global libraries, right click javafx and select add to modules, then add module-info.java file to project.
+
+///How to add VM option in IntelliJ IDEA///
+1. Go to run tab.
+2. Go to Edit Configuration.
+3. Go to Modify options.
+4. then add <--module-path "Your JavaFx SDK lib directory" --add-modules javafx.controls,javafx.fxml> at the     place of "VM Option".
+5. then press apply and ok.
+
+
+
+![p1](https://user-images.githubusercontent.com/95052507/155701612-05cd1dfc-237f-4d0f-8e1a-42cc05516256.png)
+![P2](https://user-images.githubusercontent.com/95052507/155701618-de78d981-64b5-4ba7-8b7f-f5619a6c7eab.png)
+![P3](https://user-images.githubusercontent.com/95052507/155701620-6cacc401-210a-472d-b30f-5798ab4d1ec9.png)
+![P4](https://user-images.githubusercontent.com/95052507/155701621-398af052-dc95-4520-bad0-0e0a9ecd6487.png)
